--- a/helm-guestbook/templates/job.yaml
+++ b/helm-guestbook/templates/job.yaml
@@ -3,6 +3,7 @@ kind: Job
 metadata:
   name: job-guestbook
 spec:
+  activeDeadlineSeconds: 45
   backoffLimit: 0
   ttlSecondsAfterFinished: 84600
   template:
