--- a/helm-guestbook/templates/job.yaml
+++ b/helm-guestbook/templates/job.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: job-guestbook
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "gcr.io/google-samples/gb-frontend:v4"
           imagePullPolicy: Always
           resources:
             limits:
