--- a/helm-guestbook/templates/job.yaml
+++ b/helm-guestbook/templates/job.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: job-guestbook
-          image: "ghcr.io/knative-extensions/helloworld:latest"
+          image: "docker.io/library/hello-world:latest"
           imagePullPolicy: Always
           resources:
             limits:
