--- a/helm-guestbook/templates/job.yaml
+++ b/helm-guestbook/templates/job.yaml
@@ -2,8 +2,8 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: job-guestbook-123
-  annotations:
-    argocd.argoproj.io/sync-options: Force=true,Replace=true
+  # annotations:
+  #   argocd.argoproj.io/sync-options: Force=true,Replace=true
 spec:
   backoffLimit: 0
   ttlSecondsAfterFinished: 60
