--- a/helm-guestbook/templates/job.yaml
+++ b/helm-guestbook/templates/job.yaml
@@ -3,8 +3,9 @@ kind: Job
 metadata:
   name: job-guestbook-{{ randNumeric 10 }}
   annotations:
-    argocd.argoproj.io/hook: Sync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    "helm.sh/hook": pre-upgrade,pre-install
+    "helm.sh/hook-weight": "0"
+    "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
 spec:
   backoffLimit: 0
   ttlSecondsAfterFinished: 60
