--- a/helm-guestbook/templates/job.yaml
+++ b/helm-guestbook/templates/job.yaml
@@ -1,12 +1,11 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: job-guestbook-{{ .Values.image.tag }}
+  name: job-guestbook-{{ .Values.tag }}
   annotations:
     argocd.argoproj.io/sync-wave: "2"
 spec:
   backoffLimit: 0
-  # ttlSecondsAfterFinished: 60
   template:
     metadata:
       labels:
@@ -14,7 +13,7 @@ spec:
     spec:
       containers:
         - name: job-guestbook
-          image: "docker.io/library/hello-world@sha256:{{ .Values.image.tag }}"
+          image: "docker.io/library/hello-world@sha256:{{ .Values.tag }}"
           imagePullPolicy: Always
           resources:
             limits:
