--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -4,10 +4,12 @@
 
 replicaCount: 1
 
+#tag: 2771e37a12b7bcb2902456ecf3f29bf9ee11ec348e66e8eb322d9780ad7fc2df
+tag: 54e66cc1dd1fcb1c3c58bd8017914dbed8701e2d8c74d9262e26bd9cc1642d31
+
 image:
   repository: gcr.io/google-samples/gb-frontend
-  #tag: 2771e37a12b7bcb2902456ecf3f29bf9ee11ec348e66e8eb322d9780ad7fc2df
-  tag: 54e66cc1dd1fcb1c3c58bd8017914dbed8701e2d8c74d9262e26bd9cc1642d31
+  tag: v5
   pullPolicy: IfNotPresent
 
 containerPort: 80
