--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -4,10 +4,10 @@
 
 replicaCount: 1
 
-#tag: 54e66cc1dd1fcb1c3c58bd8017914dbed8701e2d8c74d9262e26bd9cc1642d31
-tag: a8ea96bb64d60208d6a56712042d1cf58aa4a7d3751b897b9320b0813c81cbb4
-#repo: library
-repo: atlassian
+tag: 54e66cc1dd1fcb1c3c58bd8017914dbed8701e2d8c74d9262e26bd9cc1642d31
+#tag: a8ea96bb64d60208d6a56712042d1cf58aa4a7d3751b897b9320b0813c81cbb4
+repo: library
+#repo: atlassian
 short_sha: '{{ .Values.tag | trunc 7 | trimSuffix "-" }}'
 
 image:
