fix: correct image reference in job.yaml and update db-migrate key in values.yaml

--- a/helm-guestbook/templates/job.yaml
+++ b/helm-guestbook/templates/job.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: job-guestbook
-          image: "docker.io/{{ .Values.repo }}/hello-world@sha256:{{ .global.image.db-migrate }}"
+          image: "docker.io/{{ .Values.repo }}/hello-world@sha256:{{ .global.image.dbMigrate }}"
           imagePullPolicy: Always
           resources:
             limits:
