--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -12,7 +12,7 @@ replicaCount: 1
 #tag: a8ea96bb64d60208d6a56712042d1cf58aa4a7d3751b897b9320b0813c81cbb4
 repo: library
 #repo: atlassian
-short_sha: '{{ .Values.tag | trunc 7 | trimSuffix "-" }}'
+short_sha: '{{ .global.image.dbMigrate | trunc 7 | trimSuffix "-" }}'
 
 image:
   repository: gcr.io/google-samples/gb-frontend
