--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -2,17 +2,17 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
+replicaCount: 1
+
 global:
   image:
     dbMigrate: FAKE
 
-replicaCount: 1
-
-#tag: 54e66cc1dd1fcb1c3c58bd8017914dbed8701e2d8c74d9262e26bd9cc1642d31
+tag: 54e66cc1dd1fcb1c3c58bd8017914dbed8701e2d8c74d9262e26bd9cc1642d31
 #tag: a8ea96bb64d60208d6a56712042d1cf58aa4a7d3751b897b9320b0813c81cbb4
 repo: library
 #repo: atlassian
-short_sha: '{{ .global.image.dbMigrate | trunc 7 | trimSuffix "-" }}'
+short_sha: '{{ .Values.tag | trunc 7 | trimSuffix "-" }}'
 
 image:
   repository: gcr.io/google-samples/gb-frontend
