--- a/helm-guestbook/values.yaml
+++ b/helm-guestbook/values.yaml
@@ -6,12 +6,13 @@ replicaCount: 1
 
 global:
   image:
-    dbMigrate: FAKE
+    dbMigrate: bde7aa527375bdbed2501d9b512d7cf2ebd905007de581e97805fdfc88a19974
 
-tag: 54e66cc1dd1fcb1c3c58bd8017914dbed8701e2d8c74d9262e26bd9cc1642d31
+#tag: 54e66cc1dd1fcb1c3c58bd8017914dbed8701e2d8c74d9262e26bd9cc1642d31
 #tag: a8ea96bb64d60208d6a56712042d1cf58aa4a7d3751b897b9320b0813c81cbb4
-repo: library
-#repo: atlassian
+#tag: a8ea96bb64d60208d6a56712042d1cf58aa4a7d3751b897b9320b0813c81cbb4
+#repo: library
+repo: rlinux
 short_sha: '{{ .Values.tag | trunc 7 | trimSuffix "-" }}'
 
 image:
