--- a/helm-guestbook/templates/job.yaml
+++ b/helm-guestbook/templates/job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: job-guestbook-{{ lower (randAlphaNum 5) }}-{{ tpl .Values.short_sha . }}
+  name: job-guestbook-{{ lower (randAlphaNum 5) }}-{{ .Values.short_sha }}
   annotations:
     argocd.argoproj.io/sync-wave: "2"
 spec:
