--- a/helm-guestbook/templates/job.yaml
+++ b/helm-guestbook/templates/job.yaml
@@ -3,6 +3,8 @@ kind: Job
 metadata:
   name: job-guestbook-{{ lower (randAlphaNum 5) }}-{{ .Values.short_sha }}
   annotations:
+    argocd.argoproj.io/hook: Sync
+    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation,HookSucceeded
     argocd.argoproj.io/sync-wave: "2"
 spec:
   backoffLimit: 0
@@ -13,7 +15,7 @@ spec:
     spec:
       containers:
         - name: job-guestbook
-          image: "docker.io/{{ .Values.repo }}/hello-world:{{ .Values.global.image.dbMigrate }}"
+          image: "docker.io/{{ .Values.repo }}/hello-world@sha256:{{ .Values.global.image.dbMigrate }}"
           imagePullPolicy: Always
           resources:
             limits:
